# axplat-aarch64-d3000m-n80-laptop

./: .gitignore  Cargo.toml  README.md  axconfig.toml
src/: boot.rs  driver_input.rs  generic_timer.rs  gicv3.rs  init.rs  lib.rs  pl011.rs  ps2_keyboard.rs  simplefb.rs  vga.rs
tools/: convert_logo_raw.py  wrapper.S
