[package]
name = "axplat-aarch64-d3000m-n80-laptop"
version = "0.3.0"
description = "Implementation of `axplat` hardware abstraction layer for D3000M N80 Laptop ARM64 machine."
documentation = "https://docs.rs/axplat-aarch64-d3000m-n80-laptop"
keywords = ["arceos", "os", "hal", "embedded", "aarch64"]
categories = ["embedded", "no-std", "hardware-support", "os"]
edition = "2024"
authors = [
    "Debin Luo <luodeb@outlook.com>",
    "KylinSoft Co., Ltd. <https://www.kylinos.cn/>"
    ]
license = "Apache-2.0"
homepage = "https://github.com/kylin-x-kernel/axplat-aarch64-d3000m-n80-laptop"
repository = "https://github.com/kylin-x-kernel/axplat-aarch64-d3000m-n80-laptop"

[features]
fp-simd = ["axcpu/fp-simd"]
irq = ["axplat/irq"]
rtc = []
smp = ["axplat/smp"]
default = ["fp-simd"]

[dependencies]
log = "0.4"
page_table_entry = "0.5"
axconfig-macros = "0.2"
axplat-aarch64-peripherals = "0.3"
axcpu = "0.2.2"
axplat = "0.3"
aarch64-cpu = "11.2"
arm-gic-driver = "0.14"
kspin = "0.1"
memory_addr = "0.4"
lazyinit = "0.2.2"
arm_pl011 = "0.1"

[package.metadata.docs.rs]
targets = ["aarch64-unknown-none"]
